--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ img {
 }
 
 .l-inner {
+  width: 95%;
   max-width: 1080px;
   margin: 0 auto;
 }
@@ -171,30 +172,26 @@ img {
 }
 
 .sec-mainvisual .content-blk {
-  width: 45%;
+  width: 60%;
 }
 
 .sec-mainvisual .image-blk {
-  width: 45%;
+  width: 40%;
 }
 
-.sec-mainvisual .image-blk .circle-line,
-.sec-about .my-photo .circle-line {
+.sec-mainvisual .image-blk .bdr-line,
+.sec-about .my-photo .bdr-line {
   display: block;
-  width: 45%;
-  width: 35rem;
-  height: 35rem;
+  width: 55%;
   margin: 0 auto;
   padding: 1rem;
   border: 2px solid #fff;
-  border-radius: 50rem;
 }
 
 .sec-mainvisual .image-blk img,
 .sec-about .my-photo img {
   position: relative;
   height: 100%;
-  border-radius: 50rem;
   box-shadow: 0 0 74px rgba(19, 119, 213, 1);
   object-fit: cover;
 }
@@ -234,7 +231,7 @@ img {
 }
 
 .sec-about .my-about {
-  width: 55%;
+  width: 60%;
 }
 
 .sec-about .my-about h2 {
@@ -257,7 +254,35 @@ img {
   margin: 10rem 0;
 }
 
-.sec-service .service-list,
+.sec-service .l-inner {
+  width: 90%;
+}
+
+.sec-service .list {
+  margin-top: 4rem;
+}
+
+.sec-service ol > li {
+  list-style-type: decimal;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+
+}
+
+.sec-service ol ul {
+  margin-left: 2rem;
+  margin-top: 1rem;
+}
+
+.sec-service ol ul li {
+  list-style-type: disc;
+  font-size: 1.5rem;
+}
+
+.sec-project {
+  margin-top: 10rem;
+}
+
 .sec-project .project-list {
   margin-top: 3rem;
   display: flex;
@@ -265,349 +290,13 @@ img {
   justify-content: flex-start;
 }
 
-.sec-service .service-list li {
-  width: 45%;
-  margin: 0 2% 4%;
-  border: 2px solid var(--caribbean-current);
-  padding: 2%;
-  border-radius: 2%;
-  box-shadow: 0px 0px 20px var(--caribbean-current);
-}
-
-.sec-service .service-list li:nth-child(3n + 3),
-.sec-project .project-list li:nth-child(3n + 3) {
-  margin-right: 0;
-}
-
-.sec-service .service-list li img {
-  width: 18rem;
-  height: 18rem;
-  object-fit: cover;
-  margin: 0 auto;
-  display: block;
-  border-radius: 50%;
-}
-
-.sec-service .service-list li h3 {
-  font-size: 2.5rem;
-  font-weight: 600;
-  padding: 1.5rem 0;
-  text-align: center;
-}
-
-.sec-service .service-list li .desc-txt {
-  font-size: 1.2rem;
-}
-
-.sec-skill .cmn-ttl01 {
-  margin-bottom: 3rem;
-}
-
-.sec-skill .technical-bars {
-  width: 40%;
-}
-
-.sec-skill .technical-bars .bar {
-  margin: 40px 0;
-}
-
-.sec-skill .technical-bars .bar .bx {
-  font-size: 2rem;
-}
-
-.sec-skill .technical-bars .bar:first-child {
-  margin-top: 0;
-}
-
-.sec-skill .technical-bars .bar:last-child {
-  margin-bottom: 0;
-}
-
-.sec-skill .technical-bars .bar .info {
-  margin-bottom: 5px;
-}
-
-.sec-skill .technical-bars .bar .info span {
-  font-size: 1.8rem;
-  animation: showText .5s 1s linear forwards;
-  opacity: 0;
-}
-
-.sec-skill .technical-bars .bar .progress-line {
-  position: relative;
-  border-radius: 10px;
-  width: 100%;
-  height: 5px;
-  background-color: var(--black);
-  transform: scaleX(0);
-  transform-origin: left;
-}
-
-.sec-skill .technical-bars .bar .progress-line span {
-  height: 100%;
-  background-color: #13C7D5;
-  position: absolute;
-  border-radius: 10px;
-  transform: scaleX(0);
-  transform-origin: left;
-}
-
-.progress-line.html span {
-  width: 100%;
-}
-
-.progress-line.css span {
-  width: 100%;
-}
-
-.progress-line.scss span {
-  width: 90%;
-}
-
-.progress-line.javascript span {
-  width: 80%;
-}
-
-.progress-line.jquery span {
-  width: 95%;
-}
-
-.progress-line.wp span {
-  width: 80%;
-}
-
-.progress-line span::after {
-  position: absolute;
-  padding: .1rem .8rem;
-  background-color: var(--black);
-  color: var(--white);
-  font-size: 1.2rem;
-  border-radius: 3px;
-  top: -2.8rem;
-  right: -2rem;
-  opacity: 0;
-}
-
-.progress-line.html span::after {
-  content: "100%";
-}
-
-.progress-line.css span::after {
-  content: "100%";
-}
-
-.progress-line.scss span::after {
-  content: "90%";
-}
-
-.progress-line.javascript span::after {
-  content: "80%";
-}
-
-.progress-line.jquery span::after {
-  content: "95%";
-}
-
-.progress-line.wp span::after {
-  content: "80%";
-}
-
-.progress-line span::before {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 0;
-  border: .7rem solid transparent;
-  border-bottom-width: 0px;
-  border-right-width: 0px;
-  border-top-color: var(--black);
-  top: -1rem;
-  right: 0;
-  opacity: 0;
-}
-
-.js-animate.active .progress-line span::before,
-.js-animate.active .progress-line span::after,
-.js-animate.active .radial-bar .percentage,
-.js-animate.active .radial-bar .text {
-  animation: showText .5s 1s linear forwards;
-}
-
-.js-animate.active .progress-line,
-.js-animate.active .progress-line span {
-  animation: animate 1s 2s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
-}
-
-@keyframes animate {
-  100% {
-    transform: scaleX(1);
-  }
-}
-
-@-webkit-keyframes animate {
-  100% {
-    transform: scaleX(1);
-  }
-}
-
-@keyframes showText {
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes showText {
-  100% {
-    opacity: 1;
-  }
-}
-
-.sec-skill .my-professional {
-  width: 45%;
-}
-
-.sec-skill .radial-bars {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.radial-bar {
-  width: 48%;
-  height: 17rem;
-  margin-right: 1%;
-  margin-bottom: 2rem;
-  position: relative;
-}
-
-.radial-bar:nth-child(3n + 3) {
-  margin-right: 0;
-}
-
-.radial-bar svg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-90deg);
-  width: 12rem;
-  height: 16rem;
-}
-
-.radial-bar .progress-bar {
-  stroke-width: 10;
-  stroke: var(--black);
-  fill: transparent;
-  stroke-dasharray: 502;
-  stroke-dashoffset: 502;
-  stroke-linecap: round;
-  animation: animate-bar 1s linear forwards;
-}
-
-@keyframes animate-bar {
-  100% {
-    stroke-dashoffset: -1;
-  }
-}
-
-.path {
-  stroke-width: 10;
-  stroke: var(--robin-egg-blue);
-  fill: transparent;
-  stroke-dasharray: 502;
-  stroke-dashoffset: 502;
-  stroke-linecap: round;
-}
-
-.js-animate.active .path-1 {
-  animation: animate-path1 1s 1.5s linear forwards;
-}
-
-.js-animate.active .path-2 {
-  animation: animate-path2 1s 1.5s linear forwards;
-}
-
-.js-animate.active .path-3 {
-  animation: animate-path3 1s 1.5s linear forwards;
-}
-
-.js-animate.active .path-4 {
-  animation: animate-path4 1s 1.5s linear forwards;
-}
-
-.radial-bar .percentage {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 1.6rem;
-  opacity: 0;
-}
-
-.radial-bar .text {
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  left: 0;
-  right: 0;
-  opacity: 0;
-}
-
-@keyframes animate-path1 {
-  100% {
-    stroke-dashoffset: 50;
-  }
-}
-
-@-webkit-keyframes animate-path1 {
-  100% {
-    stroke-dashoffset: 50;
-  }
-}
-
-@keyframes animate-path2 {
-  100% {
-    stroke-dashoffset: 40;
-  }
-}
-
-@-webkit-keyframes animate-path2 {
-  100% {
-    stroke-dashoffset: 40;
-  }
-}
-
-@keyframes animate-path3 {
-  100% {
-    stroke-dashoffset: 40;
-  }
-}
-
-@-webkit-keyframes animate-path3 {
-  100% {
-    stroke-dashoffset: 40;
-  }
-}
-
-@keyframes animate-path4 {
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-
-@-webkit-keyframes animate-path4 {
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-
-.sec-project {
-  margin-top: 10rem;
-}
-
 .sec-project .project-list li {
   width: 30%;
   margin: 0 2% 4%;
+}
+
+.sec-project .project-list li:nth-child(3n+3) {
+  margin-right: 0px;
 }
 
 .sec-project .project-list li img {
@@ -710,18 +399,19 @@ footer .copyright-txt {
   }
 
   .header {
-    padding: 20px 2%;
+    padding: 2rem 2%;
   }
 
-  .sec-mainvisual .content-blk {
-    width: 50%;
-  }
 }
 
 /* SP */
 @media only screen and (max-width: 767.9px) {
   html {
     font-size: 2.67vw;
+  }
+
+  body {
+    font-size: 1.2rem;
   }
 
   .pc {
@@ -839,7 +529,7 @@ footer .copyright-txt {
 
   .sec-mainvisual {
     width: 100%;
-    padding: 10rem 0 5rem;
+    padding: 7rem 0 5rem;
   }
 
   .sec-mainvisual .main-ttl h2 {
@@ -874,13 +564,7 @@ footer .copyright-txt {
   }
 
   .cmn-ttl01 {
-    font-size: 3rem;
-  }
-
-  .sec-mainvisual .image-blk .circle-line, 
-  .sec-about .my-photo .circle-line {
-    width: 30rem;
-    height: 30rem;
+    font-size: 2.5rem;
   }
 
   .sec-about .d-flex {
@@ -889,6 +573,11 @@ footer .copyright-txt {
 
   .sec-about .my-about {
     width: 100%;
+  }
+
+  .sec-about .my-about h2 {
+    font-size: 2.5rem;
+    text-align: center;
   }
 
   .sec-about .my-photo {
@@ -900,27 +589,20 @@ footer .copyright-txt {
     margin: 5rem 0;
   }
 
-  .sec-service .service-list, .sec-project .project-list {
-    flex-direction: column;
+  .sec-service .l-inner {
+    width: 82%;
   }
 
-  .sec-service .service-list li {
-    width: 96%;
-    margin: 0 auto 4%;
-    padding: 2rem;
+  .sec-service .list {
+    margin-top: 2rem;
   }
 
-  .sec-skill .technical-bars {
-    width: 100%;
+  .sec-service ol > li {
+    font-size: 1.8rem;
   }
 
-  .sec-skill .my-professional {
-    margin-top: 4rem;
-    width: 100%;
-  }
-  
-  .progress-line span::after {
-    right: 0;
+  .sec-service ol ul li {
+    font-size: 1.2rem;
   }
 
   .sec-project {
@@ -932,7 +614,14 @@ footer .copyright-txt {
     margin: 0 auto 3rem;
   }
 
-  .sec-service .service-list li:nth-child(3n + 3),
+  .sec-project .project-list li h3 {
+    font-size: 1.4rem;
+  }
+
+  .sec-project .project-list li .tech-list span {
+    font-size: 1rem;
+  }
+
   .sec-project .project-list li:nth-child(3n + 3) {
     margin-right: inherit;
   }
