adding js animation

--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,30 @@ footer .copyright-txt {
   padding: 1rem 0;
 }
 
+  /* Scroll in */
+  .fade-up {
+    transform: translateY(20px);
+    opacity: 0;
+    transition: all 1s;
+  }
+  
+  .js-animation.active .fade-up {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  
+  .delay01 {
+    transition-delay: 0.3s;
+  }
+  
+  .delay02 {
+    transition-delay: 0.6s;
+  }
+  
+  .delay03 {
+    transition-delay: 0.7s;
+  }
+
 
 /* Ipad */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -558,7 +582,7 @@ footer .copyright-txt {
     margin: 2rem auto 0;
     padding: 4px 20px;
     display: block;
-    width: 40%;
+    width: 48%;
     border-radius: 2rem;
     font-size: 1.6rem;
     text-align: center;
